# rusty-tea

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  test_voice.sh
docker/: Dockerfile  docker-compose.yml
migrations/: 20240101000001_init_schema.sql
src/: config.rs  main.rs  middleware.rs  models.rs
src/handlers/: health.rs  mod.rs  transcription.rs  voice_chat.rs
src/services/: database_service.rs  elevenlabs_service.rs  llm_service.rs  mod.rs  qdrant_service.rs  voice_session_service.rs  vosk_service.rs
tests/: container_tests.rs  integration_test.rs
