[package]
name = "rusty-tea"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
vosk = "0.3"
hound = "3.5"
futures = "0.3"
bytes = "1.5"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
tokio-postgres = "0.7"
qdrant-client = "1.0"
async-openai = "0.14"
text-splitter = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
